New project Authorization.VKontakte created

--- a/Exercises/Authorization.VKontakte/appsettings.json
+++ b/Exercises/Authorization.VKontakte/appsettings.json
@@ -10,8 +10,11 @@
   "Authentication": {
     "Facebook": {
       "AppId": "xxxxxxxxxxxxxxxxxxxx",
-      "AppSecret": "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+      "AppSecret": "xxxxxxxxxxxxxxxxxxxxxxxxx"
+    },
+    "VK": {
+      "AppId": "xxxxxxx",
+      "AppSecret": "xxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
     }
-  } 
-
+  }
 }
