--- a/Exercises/Authorization.IdentityServer/Authorization.IdentityServer.csproj
+++ b/Exercises/Authorization.IdentityServer/Authorization.IdentityServer.csproj
@@ -6,6 +6,11 @@
 
   <ItemGroup>
     <PackageReference Include="IdentityServer4" Version="3.1.3" />
+    <PackageReference Include="IdentityServer4.AspNetIdentity" Version="3.1.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.3" />
   </ItemGroup>
 
 </Project>
