--- a/Exercises/Authorization.Client.Mvc/Authorization.Client.Mvc.csproj
+++ b/Exercises/Authorization.Client.Mvc/Authorization.Client.Mvc.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="IdentityModel" Version="4.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="3.1.4" />
   </ItemGroup>
 
