--- a/Exercises/Authorization.Swagger/Authorization.Swagger.csproj
+++ b/Exercises/Authorization.Swagger/Authorization.Swagger.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Calabonga.DemoClasses" Version="1.0.1" />
+    <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="3.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.4.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.4.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="5.4.1" />
