--- a/Exercises/Authorization.IdentityServer/appsettings.json
+++ b/Exercises/Authorization.IdentityServer/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ApplicationDbContext": "Server=localhost;Database=IdentityServerUsers;User ID=sa;Password=8jkGh47hnDw89Haq8LN2;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
