--- a/Exercises/Authorization.IdentityServer/Properties/launchSettings.json
+++ b/Exercises/Authorization.IdentityServer/Properties/launchSettings.json
@@ -2,8 +2,7 @@
  "profiles": {
    "Authorization.IdentityServer": {
       "commandName": "Project",
-      "launchBrowser": false,
-      "launchUrl": "site/index",
+      "launchBrowser": true,
       "applicationUrl": "https://localhost:10001;http://localhost:10000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
