InMemory mode enabled for IdentityServer4

--- a/Exercises/Authorization.Users.Api/Properties/launchSettings.json
+++ b/Exercises/Authorization.Users.Api/Properties/launchSettings.json
@@ -2,7 +2,7 @@
  "profiles": {
    "Authorization.Users.Api": {
       "commandName": "Project",
-      "launchBrowser": false,
+      "launchBrowser": true,
       "launchUrl": "site/index",
       "applicationUrl": "https://localhost:9001;http://localhost:9000",
       "environmentVariables": {
