--- a/Exercises/Authorization.Users.Api/Authorization.Users.Api.csproj
+++ b/Exercises/Authorization.Users.Api/Authorization.Users.Api.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="IdentityModel" Version="4.3.1" />
+    <PackageReference Include="IdentityModel" Version="4.5.0" />
   </ItemGroup>
 
 </Project>
